# jinjax

./: .flake8  .gitignore  .pre-commit-config.yaml  MIT-LICENSE  Makefile  README.md  package-lock.json  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/workflows/: run_tests.yml  test.yml  upload-to-pypi.yml
benchmark/: Card.jinja  CloseBtn.jinja  Greeting.jinja  Layout.jinja  Real.jinja  Simple.jinja  benchmark.py  hello.html  profile.py
docs/: components.md  css_and_js.md  deploy.sh  docs.py  index.md  indexer.js  motivation.md  package-lock.json  package.json  postcss.config.js  requirements.txt  slots.md  tailwind.config.js
docs/components/: Button.jinja  Callout.jinja  CodeGroup.jinja  CodePanel.jinja  CodeTab.jinja  CodeTabs.jinja  Copyright.jinja  ExampleArgumentsLayoutComponents.jinja  Home.jinja  HomeEn.jinja  Logo.jinja  MetaTags.jinja  NavExtra.jinja  NavLinks.jinja  PageHome.jinja  SocialCardIndex.jinja  copyright.jinja  header-extra.jinja  home.css  home.jinja  nav-links.jinja  social-card-index.jinja
docs/components/Home/: Better.jinja  BetterCard.jinja  Engage.jinja  Example.jinja  ExampleChaos.jinja  ExampleClarity.jinja  Header.jinja  Spaguetti.jinja
docs/components/guide/: CompArchive.jinja  CompLayout.jinja  SlotsModalBody.jinja  SlotsModalFooter.jinja  SlotsModalHeader.jinja
docs/components/guide/slots/: CompArchive.jinja  Modal.jinja
docs/components/ui/Accordion/: Accordion.css  DemoCSS.jinja  DemoHTML.jinja  DemoResult.jinja
docs/components/ui/Dialog/: DemoCode.jinja  DemoPreview.jinja
docs/components/ui/LinkedList/: DemoCSS.jinja  DemoHTML.jinja  DemoResult.jinja  LinkedList.css
docs/components/ui/Menu/: DemoCSS.jinja  DemoHTML.jinja  DemoResult.jinja  Menu.css
docs/components/ui/Popover/: DemoCSS.jinja  DemoHTML.jinja  DemoResult.jinja  Popover.css
docs/components/ui/Tabs/: DemoCSS.jinja  DemoHTML.jinja  DemoResult.jinja  ManualHTML.jinja  ManualResult.jinja  SelectHTML.jinja  SelectResult.jinja  Tabs.css  VerticalHTML.jinja  VerticalResult.jinja
docs/content/: api.md  api.mdx  index.md  index.mdx  motivation.mdx
docs/content/api/: index.md
docs/content/en/: index.md
docs/content/en/guide/: arguments.md  css_and_js.md  extra.md  index.md
docs/content/es/: index.md  index.mdx
docs/content/es/guia/: argumentos.md  componentes.mdx  css_y_js.md  css_y_js.mdx  extra.md  extra.mdx  index.md  index.mdx
docs/content/guide/: components.md  components.mdx  css_and_js.md  css_and_js.mdx  extra.md  extra.mdx  index.md  index.mdx  motivation.md  slots.md
docs/content/guides/: arguments.mdx  components.mdx  css_and_js.mdx  index.mdx  organization.mdx  slots.mdx
docs/content/ui/: accordion.md  button.md  index.md  linkedlist.md  menu.md  popover.md  reldate.md  tabs.md
docs/static/: _docs.css  _prose.css  _source.css  _tailwind.css  docs.css  docs.js  fonts.css  prose.css  search-en.json  search-es.json  theme.css
docs/static/img/: anatomy-en.jinja
docs/theme/: ArrowRight.jinja  Autodoc.jinja  AutodocObject.jinja  Callout.jinja  CloseBtn.jinja  CodeTab.jinja  CodeTabs.jinja  Dropdown.jinja  Example.css  Example.jinja  ExampleTabs.jinja  Footer.jinja  Hamburger.jinja  Header.jinja  Icon.jinja  Image.jinja  Key.jinja  Keys.jinja  LangSwitch.jinja  Layout.css  Layout.jinja  LinkButton.jinja  Menu.jinja  MetaTags.jinja  MyMenu.jinja  NavBar.jinja  NavGlobal.jinja  NavLocal.jinja  NavMobile.jinja  NavTop.jinja  Page.css  Page.jinja  PageSingle.jinja  PrevNext.jinja  SearchBar.jinja  SearchBtn.jinja  SearchDialog.jinja  SearchDialog.js  SearchResult.jinja  SidebarGlobal.jinja  (+16 more)
docs_old/: deploy.sh  requirements.txt
docs_old/assets/stylesheets/: common.css
docs_old/en/: mkdocs.yml
docs_old/en/docs/: index.md
docs_old/es/: mkdocs.yml  overrides
docs_old/es/docs/: index.md
docs_old/es/site/: 404.html  index.html  sitemap.xml
docs_old/es/site/assets/stylesheets/: common.css  highlight.css
docs_old/es/site/guide/: index.html
docs_old/es/site/guide/arguments/: index.html
docs_old/es/site/guide/css_and_js/: index.html
docs_old/es/site/guide/extra/: index.html
docs_old/es/site/search/: search_index.json
docs_old/overrides/: home.html  main.html
src/jinjax/: __init__.py  catalog.py  component.py  exceptions.py  html_attrs.py  jinjax.py  middleware.py  utils.py
tests/: conftest.py  test_catalog.py  test_component.py  test_extension.py  test_html_attrs.py  test_library.py  test_middleware.py  test_prefix.py  test_render.py  test_render_assets.py  test_thread_safety.py
